--- a/automotive/src/main/res/values/themes.xml
+++ b/automotive/src/main/res/values/themes.xml
@@ -1,4 +1,5 @@
 <resources>
 
-    <style name="Theme.TheFunkyWack" parent="android:Theme.Material.Light.DarkActionBar" />
+    <!-- AppCompat theme required for AppCompatActivity -->
+    <style name="Theme.TheFunkyWack" parent="Theme.AppCompat.Light.NoActionBar" />
 </resources>
