--- a/tv/src/main/res/drawable/tv_banner.xml
+++ b/tv/src/main/res/drawable/tv_banner.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Background -->
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="#FF1A1A1A" />
-        </shape>
-    </item>
-    <!-- App name text area with gradient -->
+    <!-- Background gradient -->
     <item>
         <shape android:shape="rectangle">
             <gradient
                 android:type="linear"
                 android:angle="135"
-                android:startColor="#FF2A2A2A"
-                android:endColor="#FF0A0A0A" />
+                android:startColor="#FF2D2D2D"
+                android:endColor="#FF1A1A1A" />
         </shape>
     </item>
+
+    <!-- App icon centered - larger for better visibility -->
+    <item
+        android:gravity="center"
+        android:width="120dp"
+        android:height="120dp"
+        android:drawable="@mipmap/ic_launcher_foreground" />
 </layer-list>
